Fix messages overflowing
Though a kind of Tape fix it works so far

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,6 +1,7 @@
 :root {
   --main-color: #3c0246;
   --secondary-color: #50115b;
+  --header-height: 50px;
 }
 
 .app {
@@ -12,7 +13,7 @@
   width: 100vw;
   display: grid;
   grid-template-columns: 60px 1fr 3fr;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: var(--header-height) 1fr;
   grid-template-areas:
     "header header header"
     "nav direct conversation";
